samples/_failures_safe/1761430391_3c6d63_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_06f4a573.c: In function ‘tokenize’:
./samples/SAFE/__tmp_06f4a573.c:160:13: error: expected declaration or statement at end of input
  160 |             token_count++;
      |             ^~~~~~~~~~~
./samples/SAFE/__tmp_06f4a573.c:160:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_06f4a573.c:160:13: error: expected declaration or statement at end of input
